2008-11-07  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml: [close_out] now recursively calls [close_out] of [out_upstream]

	* src/core/extlib/base64.ml: in [encode], added anonymous argument to [create_out]

	* src/core/extlib/IO.ml*: [wrap_out] created, [create_out] rewritten from [wrap_out]

	* src/core/extlib/IO.mli: [lmargin] removed

	* src/core/extlib/IO.ml: [pos_out] now doesn't [close] [out]

	* src/core/extlib/innerIO.ml: [output.out_upstream] added, [create_out] now accepts argument [underlying]

	* src/core/extlib/IO.ml*: when closing, [comb] now returns both accumulators
	
	* src/core/extlib/IO.ml*: added argument [underlying] to [create_out]

	* src/core/extlib/IO.ml*: [tab_out] now returns a [unit output], won't [flush] or [close]
	 underlying output

	* src/batteries_toolchain/top.ml: added [open Standard]

	* src/libs/camlzip/gZip.ml: tweaked error message

	* src/libs/camlzip/gZip.ml*: [with_in], [with_out] added

	* src/libs/common/compress.ml*: [with_in], [with_out] added

	* src/core/extlib/IO.ml: [write_enum] added

	* src/core/extlib/IO.ml: occurrences of [Enum.iter] replaced with [write_enum]

	* src/core/extlib/innerIO.ml: [close_out] now calls [flush]

	* src/core/extlib/innerIO.ml: [create_out] now won't automatically call [flush]

	* src/libs/camlzip/gZip.mli: added hyperlinks into comments

	* batteries.godiva (Depends): added [godi-zip]

	* src/libs/camlzip/_tags: added [pkg_camlzip]

	* src/batteries_toolchain/top.ml: added [open Batteries], [!] before [Sys.interactive]
	

2008-11-06  David Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/toplevel.html: added more documentation

	* doc/batteries/html/style.css: added class [code.example]

	* src/batteries_toolchain/top.ml: now checks for interactivity

	* src/core/extlib/pSet.ml*: [print] added

	* src/core/extlib/pMap.ml*: [print] added

	* src/core/extlib/extSet.ml*: created

	* src/core/extlib/extHashtbl.mli: fixed documentation typo
